# windexer

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  rust-toolchain
.github/workflows/: ci.yml  release.yml
benches/: indexing_benchmark.rs
config/: default.toml
config/schemas/: account.json  transaction.json
deploy/kubernetes/: windexer-deployment.yaml
deploy/terraform/: main.tf
docs/api/: openapi.yaml
docs/architecture/: high-level-design.md
docs/operations/: deployment-guide.md
examples/custom_indexers/: token_indexer.wat
examples/queries/: complex_account_query.graphql
migrations/: V1__initial_schema.sql
proto/: mod.rs  windexer.proto
scripts/ci/: lint.sh  test.sh
scripts/deployment/: deploy.sh
scripts/monitoring/: setup_grafana.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/compression/: account.rs  instruction.rs  merkle.rs  mod.rs  poseidon.rs
src/grpc/: client.rs  methods.rs  mod.rs  server.rs  service.rs
src/lib/: lib.rs
src/lib/api/: handlers.rs  middleware.rs  mod.rs
src/lib/compression/: groth16.rs  merkle.rs  mod.rs  zk_snark.rs
src/lib/indexer/: account.rs  block.rs  mod.rs  transaction.rs
src/lib/metrics/: mod.rs  prometheus.rs
src/lib/rpc/: client.rs  methods.rs  mod.rs
src/lib/storage/: clickhouse.rs  database.rs  filecoin.rs  mod.rs  models.rs  scylla.rs
src/lib/utils/: config.rs  error.rs  logging.rs  mod.rs
src/lib/wasm/: mod.rs
src/storage/: database.rs  filecoin.rs  mod.rs
src/wasm/: mod.rs  runtime.rs  types.rs
tools/: benchmark.rs  data_generator.rs  schema_generator.rs
utils/: config.rs
