[package]
name = "windexer"
version = "0.1.0"
edition = "2021"
authors = ["Vivek <vivek@cypheros.xyz>"]
description = "High-performance Solana indexer with ZK compression and advanced querying"
repository = "https://github.com/cypherwg/windexer"
license = "GNU-GPLv3"

[workspace]
members = [
    "src/lib",
    "src/bin/windexer",
    "src/bin/cli",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.3"
solana-sdk = "2.0.13"
solana-client = "2.0.13"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13.2"
redis = { version = "0.27.2", features = ["tokio-comp"] }
scylla = "0.14.0"
clickhouse = "0.13.0"
wasmer = "4.3.7"
graphql_client = "0.14.0"
warp = "0.3"
filecoin-proofs-api = "18.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.14.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.1.0"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"

[dev-dependencies]
mockall = "0.13.0"
criterion = "0.5.1"
proptest = "1.0"
fake = "2.5"

[[bench]]
name = "indexing_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"