[package]
name = "windexer"
version = "0.1.0"
edition = "2021"
authors = ["Vivek <vivek@cypheros.xyz>"]
description = "High-performance Solana indexer with ZK compression and advanced querying"
repository = "https://github.com/cypherwg/windexer"
license = "GNU-GPLv3"

[[bin]]
name = "windexer"
path = "src/main.rs"

[[bin]]
name = "windexer-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.3"
solana-sdk = "2.0.13"
solana-client = "2.0.13"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13.2"
redis = { version = "0.27.2", features = ["tokio-comp"] }
scylla = "0.14.0"
clickhouse = "0.13.0"
wasmer = "4.3.7"
graphql_client = "0.14.0"
warp = "0.3"
filecoin-proofs-api = "18.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.14.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.1.0"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
poseidon = "0.1.0"
rand = "0.8.5"
solana-transaction-status = "2.0.13"
log = "0.4.22"
prometheus = "0.13.4"
lazy_static = "1.5.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
ipfs-api-backend-hyper = "0.6.0"
cid = "0.11.1"
hex = "0.4.3"
toml = "0.8.19"
wasmer-compiler-cranelift = "4.4.0"
ethers = { version = "2.0.14" }
ethers-abi = { version = "18.0.0"}
criterion = "0.5.1"
chrono = "0.4.38"
schemars = "0.8.21"
borsh = "1.5.1"

[patch.crates-io]
der = { git = "https://github.com/tavakyan/formats.git", branch = "fix/downgrade-zeroize-version" }
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }

[dev-dependencies]
mockall = "0.13.0"
criterion = "0.5.1"
proptest = "1.0"
fake = "2.5"

[build-dependencies]
tonic-build = "0.12.3"

[[bench]]
name = "indexing_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "benchmark"
path = "tools/benchmark.rs"

[[bin]]
name = "data_generator"
path = "tools/data_generator.rs"

[[bin]]
name = "schema_generator"
path = "tools/schema_generator.rs"